// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading indicator 1`] = `
<div
  className="root"
>
  <span
    className="root"
  >
    <svg
      className="icon"
      fill="none"
      height={64}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={64}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="12"
        x2="12"
        y1="2"
        y2="6"
      />
      <line
        x1="12"
        x2="12"
        y1="18"
        y2="22"
      />
      <line
        x1="4.93"
        x2="7.76"
        y1="4.93"
        y2="7.76"
      />
      <line
        x1="16.24"
        x2="19.07"
        y1="16.24"
        y2="19.07"
      />
      <line
        x1="2"
        x2="6"
        y1="12"
        y2="12"
      />
      <line
        x1="18"
        x2="22"
        y1="12"
        y2="12"
      />
      <line
        x1="4.93"
        x2="7.76"
        y1="19.07"
        y2="16.24"
      />
      <line
        x1="16.24"
        x2="19.07"
        y1="7.76"
        y2="4.93"
      />
    </svg>
  </span>
  <span
    className="message"
  >
    Fetching Customer Details...
  </span>
</div>
`;

exports[`renders prefilled form with data with disabled buttons 1`] = `
Array [
  <FormError
    errors={Array []}
  />,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={false}
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Philip"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={false}
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Fry"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="country"
    >
      <Country
        validate={[Function]}
      />
    </div>
    <div
      className="street0"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street0"
        >
          Street Address
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value="3000 57th Street"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street1"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street1"
        >
          Street Address 2
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="street[1]"
              onBlur={[Function]}
              onChange={[Function]}
              value="Suite 200"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="city"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value="Manhattan"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region"
    >
      <Region
        optionValueKey="id"
        validate={[Function]}
      />
    </div>
    <div
      className="postcode"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="postcode"
        >
          ZIP / Postal Code
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="postcode"
              onBlur={[Function]}
              onChange={[Function]}
              value="10019"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="telephone"
        >
          Phone Number
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value="(123) 456-7890"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="defaultShipping"
    >
      <label
        className="root"
        htmlFor="default_shipping"
      >
        <input
          checked={false}
          className="input"
          disabled={false}
          id="default_shipping"
          name="default_shipping"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        />
        <span
          className="label"
        >
          Make this my default address
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="buttons"
    >
      <button
        className="root_normalPriority"
        disabled={true}
        onClick={[MockFunction handleCancel]}
        type="button"
      >
        <span
          className="content"
        >
          Cancel
        </span>
      </button>
      <button
        className="root_highPriority"
        disabled={true}
        type="submit"
      >
        <span
          className="content"
        >
          Update
        </span>
      </button>
    </div>
  </form>,
]
`;

exports[`renders prefilled form with data with enabled buttons 1`] = `
Array [
  <FormError
    errors={Array []}
  />,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={false}
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Philip"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={false}
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Fry"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="country"
    >
      <Country
        validate={[Function]}
      />
    </div>
    <div
      className="street0"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street0"
        >
          Street Address
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value="3000 57th Street"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street1"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street1"
        >
          Street Address 2
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="street[1]"
              onBlur={[Function]}
              onChange={[Function]}
              value="Suite 200"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="city"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value="Manhattan"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region"
    >
      <Region
        optionValueKey="id"
        validate={[Function]}
      />
    </div>
    <div
      className="postcode"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="postcode"
        >
          ZIP / Postal Code
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="postcode"
              onBlur={[Function]}
              onChange={[Function]}
              value="10019"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="telephone"
        >
          Phone Number
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value="(123) 456-7890"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="defaultShipping"
    >
      <label
        className="root"
        htmlFor="default_shipping"
      >
        <input
          checked={true}
          className="input"
          disabled={true}
          id="default_shipping"
          name="default_shipping"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <span
            className="root"
          >
            <svg
              className="icon"
              fill="none"
              height={18}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={18}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="20 6 9 17 4 12"
              />
            </svg>
          </span>
        </span>
        <span
          className="label"
        >
          Make this my default address
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="buttons"
    >
      <button
        className="root_normalPriority"
        disabled={false}
        onClick={[MockFunction handleCancel]}
        type="button"
      >
        <span
          className="content"
        >
          Cancel
        </span>
      </button>
      <button
        className="root_highPriority"
        disabled={false}
        type="submit"
      >
        <span
          className="content"
        >
          Update
        </span>
      </button>
    </div>
  </form>,
]
`;

exports[`renders special form for initial default address entry 1`] = `
Array [
  <FormError
    errors={
      Array [
        Object {
          "message": "Form Error",
        },
      ]
    }
  />,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="formMessage"
    >
      <p
        className="root"
      >
        The shipping address you enter will be saved to your address book and set as your default for future purchases.
      </p>
    </div>
    <div
      className="email"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="email"
        >
          Email
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={true}
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              value="fry@planet.express"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={true}
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Philip"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={true}
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Fry"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="country"
    >
      <Country
        validate={[Function]}
      />
    </div>
    <div
      className="street0"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street0"
        >
          Street Address
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street1"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="street1"
        >
          Street Address 2
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="street[1]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="city"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region"
    >
      <Region
        optionValueKey="id"
        validate={[Function]}
      />
    </div>
    <div
      className="postcode"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="postcode"
        >
          ZIP / Postal Code
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="postcode"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="telephone"
        >
          Phone Number
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <input
      name="default_shipping"
      onBlur={[Function]}
      onChange={[Function]}
      type="hidden"
      value={true}
    />
    <div
      className="buttons"
    >
      <button
        className="root_normalPriority"
        disabled={false}
        type="submit"
      >
        <span
          className="content"
        >
          Save and Continue
        </span>
      </button>
    </div>
  </form>,
]
`;
